--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "demo-vite",
+  "name": "Velvety-Beauty",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/demo-vite/",
+    "build": "vite build --base=/Velvety-Beauty/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,7 +14,7 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Roman Havryliuk <romanfest1221@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.2.0",
