--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Roman Havryliuk <romanfest1221@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "swiper": "^12.0.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
